Update Day 02 - Matplotlib.ipynb

--- a/Day 02 - Matplotlib.ipynb
+++ b/Day 02 - Matplotlib.ipynb
@@ -38,7 +38,7 @@
    "id": "083ff023-47ac-4a28-aff8-664a7184d625",
    "metadata": {},
    "source": [
-    "## ‣ Problem 1: Real-World Everyday-Use Problem (Lists & Strings)\n",
+    "## ‣ Problem 1: Real-World Everyday-Use Problem \n",
     "\n",
     "**Problem Statement:**\n",
     "You're working on a dashboard to visualize employee participation in a company project. There are 5 developers who worked for different durations (in hours) on the project. The total duration allotted for the project was 8 hours. Create a visualization to show how much each developer contributed out of the total time, and make the chart:\n",
@@ -160,7 +160,7 @@
    "id": "b0584e14-6677-46cb-8f7d-5a968db04efb",
    "metadata": {},
    "source": [
-    "## ‣ Problem 2: Difficult Problem (Dictionaries & Sets)\n",
+    "## ‣ Problem 2: Difficult Problem \n",
     "\n",
     "**Problem Statement:**\n",
     "You are given daily temperature data (in °C) for two cities—City A and City B—over 10 days. Your task is to compare their temperature trends visually. Plot a line chart for both cities and use a shaded area to indicate where:\n",
